--- a/HtmlPreviewApp.csproj
+++ b/HtmlPreviewApp.csproj
@@ -1,9 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.16.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bibliotecas\BibliotecaHTML2PDF-Laura\HtmlToPdfConverter\HtmlToPdfConverter-Version1.csproj" />
+  </ItemGroup>
 
 </Project>
